cmake_minimum_required(VERSION 3.22)
project (PrintStarPattern)

add_executable(print_star_pattern_01
    print_star_pattern_01.c
)

add_executable(print_star_pattern_02
    print_star_pattern_02.c
)

add_executable(print_star_pattern_03
    print_star_pattern_03.c
)

add_executable(print_star_pattern_04
    print_star_pattern_04.c
)

add_executable(print_star_pattern_05
    print_star_pattern_05.c
)

add_executable(print_star_pattern_06
    print_star_pattern_06.c
)

add_executable(print_star_pattern_07
    print_star_pattern_07.c
)

add_executable(print_star_pattern_08
    print_star_pattern_08.c
)

add_executable(print_star_pattern_09
    print_star_pattern_09.c
)
